# wrapper-windows-build

./: .gitignore  AGENTS.md  README.md  README_de.txt  README_en.txt  README_es.txt  README_ja.txt  build-tests.xml  build.xml  default.properties
.github/actions/read-version/: action.yml
.github/workflows/: release-windows-native.yml  windows-native.yml
doc/: revisions.txt
src/c/: CMakeLists.txt  Makefile-aix-ppc-32.make  Makefile-aix-ppc-64.make  Makefile-freebsd-x86-32.gmake  Makefile-freebsd-x86-64.gmake  Makefile-hpux-ia-32.make  Makefile-hpux-ia-64.make  Makefile-hpux-parisc-32.make  Makefile-hpux-parisc-64.make  Makefile-linux-arm-64.make  Makefile-linux-armhf-32.make  Makefile-linux-ppcle-64.make  Makefile-linux-x86-32.make  Makefile-linux-x86-64.make  Makefile-macosx-arm-64.make  Makefile-macosx-universal-32.make  Makefile-macosx-universal-64.make  Makefile-solaris-sparc-32.gmake  Makefile-solaris-sparc-64.gmake  Makefile-solaris-x86-32.gmake  Makefile-solaris-x86-64.gmake  Makefile-windows-arm-64.nmake  Makefile-windows-x86-32.nmake  Makefile-windows-x86-64.nmake  Wrapper.rc  logger.c  logger.h  logger_base.h  logger_file.c  logger_file.h  loggerjni.c  loggerjni.h  messages.h  org_tanukisoftware_wrapper_WrapperManager.h  property.c  property.h  runnmake.bat  test_example.c  test_filter.c  test_hashmap.c  (+40 more)
src/conf/: wrapper.conf.in
src/java/: module-info.java
src/java/org/tanukisoftware/wrapper/: WrapperActionServer.java  WrapperGroup.java  WrapperInfo.java  WrapperInfo.java.in  WrapperJNIError.java  WrapperJarApp.java  WrapperLicenseError.java  WrapperListener.java  WrapperManager.java  WrapperPrintStream.java  WrapperProcess.java  WrapperProcessConfig.java  WrapperProcessInputStream.java  WrapperProcessOutputStream.java  WrapperProperties.java  WrapperPropertyUtil.java  WrapperResources.java  WrapperServiceException.java  WrapperShuttingDownException.java  WrapperSimpleApp.java  WrapperStartStopApp.java  WrapperSystemPropertyUtil.java  WrapperUNIXGroup.java  WrapperUNIXUser.java  WrapperUser.java  WrapperWin32Group.java  WrapperWin32Service.java  WrapperWin32User.java
src/java/testmodule/testmodule.base/: module-info.java
src/java/testmodule/testmodule.nativeaccess/: module-info.java
src/java/testmodule/testmodule.standalone/: module-info.java
src/java/testmodule/testmodule.wrapper/: module-info.java
(+106 files in other folders)
